--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 greenlet==3.0.3
+gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
@@ -25,6 +26,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 numpy==1.26.4
+packaging==24.0
 pycryptodome==3.20.0
 pymongo==4.6.3
 python-telegram-bot==21.0.1
